# thermocline

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-thermocline-py-foundations/: .continue-here.md  01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  (+9 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: index.md  install.md  ops.md  quickstart.md
docs/adr/: ADR-0001-python-3-11-as-primary-language.md  ADR-0002-pydantic-v2-lock-in.md  ADR-0003-single-canonical-json-path.md  ADR-0004-blake3-with-algo-version.md  ADR-0005-no-in-process-key-material.md  index.md
scripts/: tag-v0.1.0.sh
thermocline/: CHANGELOG.md
thermocline/conformance/: MANIFEST.yaml
thermocline/python/: README.md  pyproject.toml
thermocline/python/src/thermocline/: __init__.py  canonical.py  envelope.py  errors.py  identity.py  schemes.py  sensitive.py  signing.py  version.py
thermocline/python/src/thermocline/scripts/: __init__.py  build_schemas.py  check_no_json_dumps.py
thermocline/python/tests/: __init__.py  conftest.py  test_canonical.py  test_canonical_properties.py  test_conformance_fixtures.py  test_envelope.py  test_envelope_constraints.py  test_envelope_tiers.py  test_identity.py  test_identity_brine_roundtrip.py  test_identity_cross_role.py  test_identity_dispatch.py  test_identity_generate_idempotent.py  test_identity_keystore_required.py  test_identity_real_envelope.py  test_identity_receipt_private.py  test_identity_rotation_revoke.py  test_no_json_dumps.py  test_schema_drift.py  test_sensitive.py  test_signing.py
thermocline/python/tests/at_negative/: test_at_c1_envelope_tampering.py  test_at_c2_envelope_replay.py  test_at_c3_shadow_correlation.py  test_at_c4_forged_dispatch_sig.py  test_at_c5_result_policy_escalation.py  test_at_c6_key_compromise.py
thermocline/python/tests/fixtures/: __init__.py  receipt_misuse.py
thermocline/schema/: error.schema.json  job.schema.json  job_result.schema.json  task.schema.json  task_result.schema.json
tools/: ast_lint_network_isolation.py  ast_lint_no_print.py  at_coverage.py  at_coverage_total.py  property_coverage.py
(+53 files in other folders)
